# zappy_42

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
AI/: env_setup.sh  main.py
include/: lib.hpp
include/core/: Client.hpp  CommandHandler.hpp  Map.hpp  Server.hpp  Team.hpp
include/network/: NetworkManager.hpp  SocketHandler.hpp
include/utils/: Exception.hpp  Logger.hpp
src/: main.cpp
src/core/: Client.cpp  CommandHandler.cpp  Map.cpp  Server.cpp  Team.cpp
src/network/: NetworkManager.cpp  SocketHandler.cpp
src/utils/: Logger.cpp
tests/: mainTest.cpp
tests/core_tests/: ClientTest.cpp  ServerTest.cpp
tests/network_tests/: NetworkManagerTest.cpp  SocketHandlerTest.cpp
tests/utils_tests/: ExceptionTest.cpp  LoggerTest.cpp
